--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CompartyApplication">
-        <activity android:name=".AddComponentActivity"></activity>
         <activity android:name=".Processor" />
         <activity android:name=".GraphicsCard" />
         <activity android:name=".MainActivity">
@@ -19,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddComponentActivity"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
