RAM Button Works
Added Funcitonality for the RAM Component Button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CompartyApplication">
+        <activity android:name=".RAM"></activity>
         <activity android:name=".Processor" />
         <activity android:name=".GraphicsCard" />
         <activity android:name=".MainActivity">
@@ -18,8 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddComponentActivity"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".AddComponentActivity"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
