--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CompartyApplication">
-        <activity android:name=".RAM"></activity>
+        <activity android:name=".Motherboard"></activity>
+        <activity android:name=".RAM" />
         <activity android:name=".Processor" />
         <activity android:name=".GraphicsCard" />
         <activity android:name=".MainActivity">
