--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CompartyApplication">
-        <activity android:name=".Cases"></activity>
+        <activity android:name=".PowerSupply"></activity>
+        <activity android:name=".Cases" />
         <activity android:name=".Motherboard" />
         <activity android:name=".RAM" />
         <activity android:name=".Processor" />
