Edit Components in CPU
Added the ability to edit the individual components of the CPU section

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddComponentActivity"
+            android:name=".AddEditComponentActivity"
             android:parentActivityName=".MainActivity" />
     </application>
 
